--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,6 +10,7 @@
 body {
   text-align: center;
   background: #444;
+  user-select: none;
 }
 
 main {
@@ -53,12 +54,28 @@ main {
   left: 13.5%;
 }
 
+.form .btn-search {
+  border: none;
+  border-left: 2px solid #333;
+  background: #e9e9e9;
+  cursor: pointer;
+  height: 91%;
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  border-radius: 4px;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  padding: 0 4%;
+  font-size: clamp(8px, 4vw, 18px);
+}
+
 .input_search {
   width: 100%;
   padding: 4%;
   outline: none;
   border: 2px solid #333;
-  border-radius: 5px;
+  border-radius: 4px;
   font-weight: 600;
   color: #3a444d;
   font-size: clamp(8px, 5vw, 1rem);
@@ -79,7 +96,7 @@ main {
   width: 50%;
   padding: 4%;
   border: 2px solid #000;
-  border-radius: 5px;
+  border-radius: 4px;
   font-size: clamp(8px, 5vw, 1rem);
   font-weight: 600;
   color: white;
